plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'co.istad'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // JWT
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // Password Validator
    implementation 'org.passay:passay:1.6.3'

    // Template Engine
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Pagination
    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'

    // Config mapstruct with lombok
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'


    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
